--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-    "name": "art-gallery-backend",
+    "name": "virtua-gallery-backend",
     "version": "1.0.0",
-    "description": "Backend for Art Gallery application",
+    "description": "Backend for Virtua Gallery application",
     "main": "server.js",
     "scripts": {
       "start": "node server.js"
     },
     "dependencies": {
       "json-server": "^0.17.3"
+    },
+    "engines": {
+      "node": "20.x"
     }
   }
